--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -60,6 +60,11 @@ strong {
 dfn {
   font-style: italic;
 }
+#blackbox{
+  background:black;
+  width:100%;
+  height:500px;
+}
 h1 {
   margin: .67em 0;
   font-size: 2em;
