--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -61,9 +61,10 @@ dfn {
   font-style: italic;
 }
 #blackbox{
-  background:black;
+  background: black;
   width:100%;
   height:500px;
+  border-radius: 10px;
 }
 h1 {
   margin: .67em 0;
