--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2370,10 +2370,23 @@ input[type="button"].btn-block {
   height: 70px;
   width: 70px;
   z-index: 100;
-  position:absolute;
+  position:relative;
   top:400px;
   left:250px;
 }
+
+.robot #robotArm{
+	height: 70px;
+	width: 70px;
+	position:absolute;
+}
+
+.robot #fullPlate, .robot #emptyPlate, .robot #fullCup, .robot #emptyCup{
+	width: 30px;
+	height: 30px;
+	position: absolute;
+}
+
 .fade {
   opacity: 0;
   -webkit-transition: opacity .15s linear;
@@ -2391,6 +2404,12 @@ input[type="button"].btn-block {
   top:100px;
   position: absolute;
   z-index: 1;
+}
+
+.tableImg1{
+	width: 50px;
+	height: 50px;
+	margin-top: -20px;
 }
 
 #table2{
