--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2390,7 +2390,7 @@ input[type="button"].btn-block {
 }
 
 .orderFood{
-	color: #633E19;
+	color: #996600;
 }
 
 .orderDrink{
@@ -2402,7 +2402,7 @@ input[type="button"].btn-block {
 }
 
 .tableNum{
-	color: #D1D12B;
+	color: #6666FF;
 }
 
 .kitchen #kitchenCounter{
