--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -65,6 +65,9 @@ dfn {
   width:100%;
   height:500px;
   border-radius: 10px;
+  background-image: url('../img/tile.jpg');
+  background-size: 75px auto;
+  background-repeat: repeat;
 }
 h1 {
   margin: .67em 0;
