updated intervals for busy and extended table

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2436,7 +2436,7 @@ input[type="button"].btn-block {
 }
 
 #table1{
-  background:yellow;
+  background:rgba(0,0,0,0);
   width: 50px;
   height:50px;
   left:50px;
@@ -2446,13 +2446,13 @@ input[type="button"].btn-block {
 }
 
 .tableImg1{
-	width: 50px;
+	width: 75px;
 	height: 50px;
 	margin-top: -0px;
 }
 
 #table2{
-  background:yellow;
+  background:rgba(0,0,0,0);
   width: 50px;
   height:50px;
   top:100px;
@@ -2462,7 +2462,7 @@ input[type="button"].btn-block {
 }
 
 #table3{
-  background:yellow;
+  background:rgba(0,0,0,0);
   width: 50px;
   height:50px;
   top:100px;
@@ -2472,7 +2472,7 @@ input[type="button"].btn-block {
 }
 
 #table4{
-  background:yellow;
+  background:rgba(0,0,0,0);
   width: 50px;
   height:50px;
   top:200px;
@@ -2482,7 +2482,7 @@ input[type="button"].btn-block {
 }
 
 #table5{
-  background:yellow;
+  background:rgba(0,0,0,0);
   width: 50px;
   height:50px;
   top:200px;
@@ -2492,7 +2492,7 @@ input[type="button"].btn-block {
 }
 
 #table6{
-  background:yellow;
+  background:rgba(0,0,0,0);
   width: 50px;
   height:50px;
   top:200px;
